frontend/test/should_fail/delretypesame_002_e.grg
rule r{	-e:Edge->;		optional {					modify {			delete(e);		}	}		modify {		-f:Edge<e>->;	}}